--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 <div class="wrapper-input">
                     <div class="wp-box">
                         <label>Put your weight in here (KG)</label>
-                        <input type="text" type="number" min="0" id="weight" placeholder="60" />
+                        <input type="text" type="number" min="0" id="weight" placeholder="" />
                     </div>
                     <div class="wp-box">
                         <label>And your height in here (CM)</label>
-                        <input type="text" type="number" min="0" id="height" placeholder="167" />
+                        <input type="text" type="number" min="0" id="height" placeholder="" />
                     </div>
                 </div>
                 <div class="wrapper-button mb-20px">
